# git-branch-stash

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  post-release.yml  rust-next.yml
crates/git-branch-stash/: Cargo.toml
crates/git-branch-stash/src/: config.rs  git.rs  lib.rs  snapshot.rs  stack.rs
crates/git-branch-stash/src/git/: branches.rs  repo.rs
src/: args.rs  config.rs  main.rs
src/git/: mod.rs
