[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gitext-rs/git-branch-stash.git"
edition = "2021"
rust-version = "1.65.0"  # MSRV
include = [
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[package]
name = "git-branch-stash-cli"
description = "Manage snapshots of your working directory"
version = "0.10.3"
documentation = "https://github.com/gitext-rs/git-branch-stash.git"
readme = "README.md"
categories = ["command-line-interface", "development-tools"]
keywords = ["git", "cli"]
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/gitext-rs/git-branch-stash/compare/{{tag_name}}...HEAD", exactly=1},
]

[[bin]]
name = "git-branch-stash"
path = "src/main.rs"
doc = false

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
env_logger = { version = "0.10.0", default-features = false, features = ["auto-color"] }
log = "0.4.17"
proc-exit = "2.0.1"
eyre = "0.6.8"
human-panic = "1.1.3"
concolor = "0.1.1"
concolor-clap = { version = "0.1.0", features = ["api"] }
anstream = "0.2.1"
anstyle = "0.3.1"

git-branch-stash = { version = "0.9.3", path = "crates/git-branch-stash" }
git2 = { version = "0.16.1", default-features = false, features = ["vendored-libgit2"] }
serde_json = "1.0.85"
itertools = "0.10.5"
