[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gitext-rs/git-branch-stash.git"
edition = "2021"
rust-version = "1.76"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[package]
name = "git-branch-stash-cli"
description = "Manage snapshots of your working directory"
version = "0.11.1"
documentation = "https://github.com/gitext-rs/git-branch-stash.git"
readme = "README.md"
categories = ["command-line-interface", "development-tools"]
keywords = ["git", "cli"]
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/gitext-rs/git-branch-stash/compare/{{tag_name}}...HEAD", exactly=1},
]

[[bin]]
name = "git-branch-stash"
path = "src/main.rs"
doc = false

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
env_logger = { version = "0.11.3", default-features = false, features = ["auto-color"] }
log = "0.4.21"
proc-exit = "2.0.1"
eyre = "0.6.12"
human-panic = "1.2.3"
concolor = "0.1.1"
concolor-clap = { version = "0.1.0", features = ["api"] }
anstream = "0.6.13"
anstyle = "1.0.6"

git-branch-stash = { version = "0.10.0", path = "crates/git-branch-stash" }
git2 = { version = ">=0.16, <=0.18", default-features = false, features = ["vendored-libgit2"] }
serde_json = "1.0.115"
itertools = "0.12.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
