[package]
name = "git-branch-stash"
description = "Manage snapshots of your working directory"
version = "0.10.1"
documentation = "https://github.com/gitext-rs/git-branch-stash.git"
categories = ["command-line-interface", "development-tools"]
keywords = ["git", "cli"]
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[dependencies]
git2 = { version = ">=0.16, <=0.18", default-features = false }
git-config-env = "0.2.0"
git2-ext = "0.6.1"
log = "0.4.20"
eyre = "0.6.8"
itertools = "0.11.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
bstr = "1.6.2"
maplit = "1.0.2"
