[package]
name = "git-branch-stash"
description = "Manage snapshots of your working directory"
version = "0.10.2"
categories = ["command-line-interface", "development-tools"]
keywords = ["git", "cli"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[dependencies]
git2 = { version = ">=0.16, <=0.20", default-features = false }
git-config-env = "0.2.3"
git2-ext = "0.6.3"
log = "0.4.29"
eyre = "0.6.12"
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bstr = "1.12.1"
maplit = "1.0.2"

[lints]
workspace = true
